--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kukutyin falva</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="shortcut icon" id="image_here"  href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="web_name">
@@ -31,5 +32,6 @@
         <p>a város új épületekkel gazdagodott</p>
         <a href="HAMAROSAN/index.html">Cikk elolvasása</a>
     </div>
+    <script src="JS/favicon change.js"></script>
 </body>
 </html>
