--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
         <p>a város új épületekkel gazdagodott</p>
         <a href="HAMAROSAN/index.html">Cikk elolvasása</a>
     </div>
+
+    <div class="hide">
+        <img src="Képek/favicon/kukutyinfalva barna.png" alt="">
+        <img src="Képek/favicon/kukutyinfalva kék.png" alt="">
+        <img src="Képek/favicon/kukutyinfalva lila.png" alt="">
+        <img src="Képek/favicon/kukutyinfalva világos kék.png" alt="">
+    </div>
     <script src="JS/favicon change.js"></script>
 </body>
 </html>
