Javítva a NAGY "bug"

--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
         <a href="HAMAROSAN/index.html">Cikk elolvasása</a>
     </div>
 
-    <div class="hide">
-        <img src="Képek/favicon/kukutyinfalva barna.png" alt="">
-        <img src="Képek/favicon/kukutyinfalva kék.png" alt="">
-        <img src="Képek/favicon/kukutyinfalva lila.png" alt="">
-        <img src="Képek/favicon/kukutyinfalva világos kék.png" alt="">
-    </div>
+
+    <img src="" alt="" id="image">
+    <script src="JS/test.js"></script>
     <script src="JS/favicon change.js"></script>
 </body>
 </html>
