--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <div class="web_name">
-        <h1>Kukutyin falva</h1>
+        <h1>Kukutyin falva</h1><img src="Képek/Képek/creeper.jpg" alt="" height="80px" width="80px">
     </div>
-    
     <div class="hirek">
-        <h1>Viharos idő közeleg!</h1>
+        <h1>McDonald's Ujjáépül!</h1>
+        <h2 class="kiemeles">2023. 07. 05.</h2>
+        <p>Rendkívüli hírek</p>
+        <a href="Cikkek/20230705/index.html">Cikk elolvasása</a>
+    </div>
+
+    <div class="hirek">
+        <h1>Viharos közeleg!</h1>
         <h2 class="kiemeles">2023. 06. 30.</h2>
         <p>Veszélyes időjárás következik</p>
         <a href="Cikkek/20230630/index.html">Cikk elolvasása</a>
