--- a/Cikkek/20230705/index.html
+++ b/Cikkek/20230705/index.html
@@ -23,7 +23,11 @@
         <br>
         <br>
         <p>A munkások eleinte ellenkeztek az építkezés megkezdésével, mert kérdőjelezték az épület szükségességét. Ám a polgármester határozottan odalépett hozzájuk és lecsapott rájuk a hangjával.</p>
+         <img src="../../Képek/Város/2023-07-05_16.26.05.png" alt="">   
+         <img src="../../Képek/Város/2023-07-05_16.26.14.png" alt="">   
+         <img src="../../Képek/Város/2023-07-05_16.26.21.png" alt="">   
     </div>
+
     <div class="vissza">
         <a href="../../index.html">Vissza</a>
     </div>
