--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <div class="hirek">
         <h1>Új Épületek</h1>
-        <h2 class="kiemeles">2023. 06. 30.</h2>
-        <p>a város új épületekkel gazdagodott</p>
-        <a href="HAMAROSAN/index.html">Cikk elolvasása</a>
+        <h2 class="kiemeles">2023. 06. 14.</h2>
+        <p>Új épületekkel gazdagodva a modernizáció útján</p>
+        <a href="Cikkek/20230614/index.html">Cikk elolvasása</a>
     </div>
-
+<br><br>
 
     <img src="" alt="" id="image">
     <script src="JS/test.js"></script>
