--- a/Cikkek/20230705/index.html
+++ b/Cikkek/20230705/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="web_name">
-        <h1>Kukutyin falva</h1><img src="../../Képek/Képek/creeper.jpg" alt="" height="80px" width="80px">
+        <h1>Kukutyin falva</h1><img src="../../Képek/Képek/creeper.jpg" alt="" height="80px" width="80px" draggable="false">
     </div>
     
     <div class="hirek">
@@ -23,9 +23,9 @@
         <br>
         <br>
         <p>A munkások eleinte ellenkeztek az építkezés megkezdésével, mert kérdőjelezték az épület szükségességét. Ám a polgármester határozottan odalépett hozzájuk és lecsapott rájuk a hangjával.</p>
-         <img src="../../Képek/Város/2023-07-05_16.26.05.png" alt="">   
-         <img src="../../Képek/Város/2023-07-05_16.26.14.png" alt="">   
-         <img src="../../Képek/Város/2023-07-05_16.26.21.png" alt="">   
+         <img src="../../Képek/Város/2023-07-05_16.26.05.png" alt="1" draggable="false">   
+         <img src="../../Képek/Város/2023-07-05_16.26.14.png" alt="2" draggable="false">   
+         <img src="../../Képek/Város/2023-07-05_16.26.21.png" alt="3" draggable="false">   
     </div>
 
     <div class="vissza">
