--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="web_name">
-        <h1>Kukutyin falva</h1><img src="Képek/Képek/creeper.jpg" alt="" height="80px" width="80px">
+        <h1>Kukutyin falva</h1><img src="Képek/Képek/creeper.jpg" alt="" height="80px" width="80px" draggable="false">
     </div>
     <div class="hirek">
         <h1>McDonald's Ujjáépül!</h1>
