több Cikk hozzáadva (frissitve)

--- a/Cikkek/20230630/index.html
+++ b/Cikkek/20230630/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viharos idő közeleg!</title>
+    <title>Vihar közeleg!</title>
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
@@ -12,9 +12,9 @@
     </div>
     
     <div class="hirek">
-        <h1>Viharos idő közeleg!</h1>
+        <h1>Vihar közeleg!</h1>
         <h2 class="kiemeles">2023. 06. 30.</h2>
-        <p>A Viharos idő 2023. 06. 30.-án kezdődik, 1 hétig esős, viharos időre lehet számítani</p>
+        <p>A Viharos idő 2023. 06. 30.-án kezdődik, 1 hétig esős, viharos időre lehet számítani.</p>
         <p>- kérjük önöket ne tartozkodjanak közvetlen fa alatt</p>
         <p>- kérjük ne menjenek, vagy tervezzenek kinti programot, amíg a vihar tart</p>
         <br>
