--- a/index.html
+++ b/index.html
@@ -12,14 +12,26 @@
         <h1>Kukutyin falva</h1><img src="Képek/Képek/creeper.jpg" alt="" height="80px" width="80px" draggable="false">
     </div>
     <div class="hirek">
-        <h1>McDonald's Ujjáépül!</h1>
+        <h1>Hirtelen változás: Fodrászat nyílik a tervezett Kis Tesco helyett a Creeper utca területén</h1>
+        <h2 class="kiemeles">2023. 07. 07.</h2>
+        <p class="kiemeles_green">Rendkívüli hírek</p>
+        <a href="Cikkek/20230707/index.html">Cikk elolvasása</a>
+    </div>
+    <div class="hirek">
+        <h1>Uj korszak virrad Kukutyin falvára és városára!</h1>
+        <h2 class="kiemeles">2023. 07. 06.</h2>
+        <p class="kiemeles_green">Rendkívüli hírek</p>
+        <a href="Cikkek/20230706/index.html">Cikk elolvasása</a>
+    </div>
+    <div class="hirek">
+        <h1>ujraéled a McDonald's varázsa!</h1>
         <h2 class="kiemeles">2023. 07. 05.</h2>
-        <p>Rendkívüli hírek</p>
+        <p class="kiemeles_green">Rendkívüli hírek</p>
         <a href="Cikkek/20230705/index.html">Cikk elolvasása</a>
     </div>
 
     <div class="hirek">
-        <h1>Viharos közeleg!</h1>
+        <h1>Vihar közeleg!</h1>
         <h2 class="kiemeles">2023. 06. 30.</h2>
         <p>Veszélyes időjárás következik</p>
         <a href="Cikkek/20230630/index.html">Cikk elolvasása</a>
@@ -28,19 +40,18 @@
     <div class="hirek">
         <h1>Híradó ideiglenesen szüneteltetve</h1>
         <h2 class="kiemeles">2023. 06. 15.</h2>
-        <p>Technikai okok végett a Híradó megszünt átmenetileg</p>
+        <p >Technikai okok végett a Híradó megszünt átmenetileg</p>
         <a href="Cikkek/20230615/index.html">Cikk elolvasása</a>
     </div>
 
     <div class="hirek">
-        <h1>Új Épületek</h1>
+        <h1>uj épületekkel gazdagodva a modernizáció útján</h1>
         <h2 class="kiemeles">2023. 06. 14.</h2>
-        <p>Új épületekkel gazdagodva a modernizáció útján</p>
+        <p>uj épületekkel gazdagodva a modernizáció útján</p>
         <a href="Cikkek/20230614/index.html">Cikk elolvasása</a>
     </div>
 <br><br>
 
-    <img src="" alt="" id="image">
     <script src="JS/test.js"></script>
     <script src="JS/favicon change.js"></script>
 </body>
