--- a/Cikkek/20230705/index.html
+++ b/Cikkek/20230705/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>McDonald's Ujjáépül!</title>
+    <title>Ujraéled a McDonald's varázsa!</title>
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </div>
     
     <div class="hirek">
-        <h1>Újraéled a McDonald's varázsa!</h1>
+        <h1>Ujraéled a McDonald's varázsa!</h1>
         <h2 class="kiemeles">2023. július 5.</h2>
         <p>A McDonald's visszatér erőteljesebben, mint valaha!</p>
         <p>Az elbűvölő Kukutyin falva városának csodálatos területén található telket vásárolta meg a McDonald's.</p>
