--- a/Cikkek/20230707/index.html
+++ b/Cikkek/20230707/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uj korszak virrad Kukutyin falvára és városára!</title>
+    <title>Fodrászat nyílik</title>
     <link rel="stylesheet" href="../../CSS/style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
     </div>
     
     <div class="hirek">
-        <h1>Hirtelen változás: Fodrászat nyílik a tervezett Kis Tesco helyett a Creeper utca területén</h1>
+        <h1>Fodrászat nyílik</h1>
         <h2 class="kiemeles">2023. 07. 07.</h2>
 
         <p>Nagy várakozás előzte meg a Creeper utca területén tervezett Kis Tesco építését, azonban most hirtelen fordulatot vett a helyzet. A tervezett áruház építését ugyanis lemondják, 
