--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <h1>Kukutyin falva</h1><img src="Képek/Képek/creeper.jpg" alt="" height="80px" width="80px" draggable="false">
     </div>
     <div class="hirek">
-        <h1>Hirtelen változás: Fodrászat nyílik a tervezett Kis Tesco helyett a Creeper utca területén</h1>
+        <h1>Cigány Tech - Egyedi Cigány Stílusú PC Bolt</h1>
+        <h2 class="kiemeles">2023. 07. 08.</h2>
+        <p class="kiemeles_green"></p>
+        <a href="Cikkek/20230708/index.html">Cikk elolvasása</a>
+    </div>
+    <div class="hirek">
+        <h1>Fodrászat nyílik...</h1>
         <h2 class="kiemeles">2023. 07. 07.</h2>
         <p class="kiemeles_green">Rendkívüli hírek</p>
         <a href="Cikkek/20230707/index.html">Cikk elolvasása</a>
